--- a/style.css
+++ b/style.css
@@ -21,11 +21,13 @@ h1, h2, h3, h4, h5, a, p, span, body, div {font-weight: normal; font-family: 'La
     position: relative;
     width: 100%;
     height: 100vh;
+    min-height: 100vh;
     background: linear-gradient(to bottom, #fdfdfd 10%, #f4f4f8 90%);
     display: flex;
     align-items: center;
     justify-content: center;
     overflow: hidden;
+    padding: 40px 0;
 }
 
 .hero-content {
@@ -441,7 +443,8 @@ td {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 200px;
+    height: auto;
+    min-height: 200px;
 }
 
 .header-profile-picture {
@@ -506,14 +509,16 @@ td {
     .header-container {
         flex-direction: column-reverse;
         text-align: center;
+        align-items: center;
     }
     .header-profile-picture {
-        margin-bottom: 16px;
+        width: 180px; 
+        height: 180px;
+        margin-right: 0;
     }
-    .header-links .btn::after {
-        left: 50%;
-        top: calc(100% + 6px);
-        transform: translateX(-50%);
+    .header-text {
+        text-align: center;
+        align-items: center;
     }
 }
 
