improved phone view 2

--- a/style.css
+++ b/style.css
@@ -507,9 +507,11 @@ td {
 
 @media only screen and (max-width: 600px) {
     .header-container {
-        flex-direction: column-reverse;
+        display: flex; 
+        flex-direction: column;
+        align-items: center; 
         text-align: center;
-        align-items: center;
+        height: auto;
     }
     .header-profile-picture {
         width: 180px; 
@@ -517,8 +519,13 @@ td {
         margin-right: 0;
     }
     .header-text {
-        text-align: center;
-        align-items: center;
+        gap: 15px; 
+        margin-bottom: 20px; 
+        min-height: 0;
+    }
+    .header-links {
+        margin-top: 10px;
+        margin-bottom: 10px;
     }
 }
 
