--- a/style.css
+++ b/style.css
@@ -442,7 +442,7 @@ td {
     flex: 1 1 320px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     height: auto;
     min-height: 200px;
 }
